[package]
name = "inkcheck"
version = "0.2.0"
authors = ["Allan Somensi <allansomensidev@proton.me>"]
description = "A CLI tool to quickly check the status of printer supplies via the command line. Written in Rust."
homepage = "https://github.com/allansomensi/inkcheck"
repository = "https://github.com/allansomensi/inkcheck"
readme = "README.md"
keywords = ["cli", "snmp", "printer-management"]
license = "MIT"
edition = "2021"

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.56", features = ["derive"] }
colored = "3.1.1"
include_dir = "0.7.4"
indicatif = "0.18.3"
openssl = { version = "0.10.75", features = ["vendored"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
snmp2 = { version = "0.4.14", features = ["v3"] }

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = [
    "run-for-all",
    "prepush-hook",
    "precommit-hook",
    "run-cargo-test",
    "run-cargo-clippy",
    "run-cargo-fmt",
]
