[package]
name = "inkcheck"
version = "0.5.1"
authors = ["Allan Somensi <allansomensidev@proton.me>"]
description = "A CLI tool to quickly check the status of printer supplies via the command line. Written in Rust."
homepage = "https://github.com/allansomensi/inkcheck"
repository = "https://github.com/allansomensi/inkcheck"
readme = "README.md"
keywords = ["cli", "snmp", "printer-management"]
license = "MIT"
edition = "2024"

[package.metadata.wix]
product-icon = "wix/Product.ico"
banner = "wix/Banner.bmp"
upgrade-guid = "254DCA48-7953-4CDA-B861-D085F2827856"
path-guid = "93EC6DB7-1BF8-4914-BEFA-22F2910B5852"
license = false
eula = "wix/Eula.rtf"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.44"
clap = { version = "4.6", features = ["derive"] }
colored = "3.1.1"
directories = "6.0.0"
include_dir = "0.7.4"
indicatif = "0.18.4"
mdns-sd = "0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
snmp2 = { version = "0.5.1", features = ["heap_buffers"] }
tokio = { version = "1.50.0", features = ["full"] }
toml = "0.9.11"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = [
    "run-for-all",
    "prepush-hook",
    "precommit-hook",
    "run-cargo-test",
    "run-cargo-clippy",
    "run-cargo-fmt",
]

[patch.crates-io]
snmp2 = { git = "https://github.com/roboplc/snmp2.git", rev = "9234ce3c26ff06805f9a7136b67673f7c9e662b2" }

[profile.dist]
inherits = "release"
lto = "thin"
